@@ -6,24 +6,22 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.ssafer.agent.domain.entity.Agent;
-import com.ssafer.agent.domain.entity.AgentTask;
-import com.ssafer.agent.domain.enums.AgentStatus;
-import com.ssafer.agent.domain.enums.AgentTaskStatus;
-import com.ssafer.agent.domain.enums.AgentTaskType;
-import com.ssafer.agent.domain.repository.AgentTaskRepository;
 import com.ssafer.project.domain.entity.Project;
 import com.ssafer.project.domain.enums.ScanMode;
 import com.ssafer.scan.domain.entity.Scan;
 import com.ssafer.scan.domain.entity.ScanFinding;
 import com.ssafer.scan.domain.entity.ScanNode;
-import com.ssafer.scan.domain.enums.FindingSourceType;
 import com.ssafer.scan.domain.enums.RequestActorType;
+import com.ssafer.scan.domain.enums.ResolutionStatus;
 import com.ssafer.scan.domain.enums.ScanStatus;
 import com.ssafer.scan.domain.enums.ScanType;
 import com.ssafer.scan.domain.repository.ScanFindingRepository;
 import com.ssafer.scan.domain.repository.ScanNodeRepository;
 import com.ssafer.scan.domain.repository.ScanRepository;
+import com.ssafer.worker.domain.entity.WorkerJob;
+import com.ssafer.worker.domain.enums.WorkerJobStatus;
+import com.ssafer.worker.domain.enums.WorkerJobType;
+import com.ssafer.worker.domain.repository.WorkerJobRepository;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -36,7 +34,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.test.util.ReflectionTestUtils;
-import tools.jackson.databind.JsonNode;
 import tools.jackson.databind.ObjectMapper;
 
 @ExtendWith(MockitoExtension.class)
@@ -45,168 +42,28 @@ class WorkerAnalysisResultPersistenceServiceTest {
   private static final String ANALYSIS_RESULT_JSON = """
       {
         "schemaVersion": "0.2",
-        "scanId": "a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd",
+        "scanId": "upload-scan-1",
         "source": "cli",
-        "scannedAt": "2026-04-27T00:26:05Z",
-        "generatedAt": "2026-05-04T01:57:29.596745+00:00",
-        "resultCount": 3,
-        "results": [
-          {
-            "findingId": "FND-0001",
-            "ruleId": "ENV_PLAIN_SECRET",
-            "source": "custom-rule",
-            "severity": "HIGH",
-            "file": ".env",
-            "line": 1,
-            "title": "?섍꼍蹂???뚯씪???쒗겕由우씠 ?섎뱶肄붾뵫?? DB_PASSWORD",
-            "maskedEvidence": "DB_PASSWORD=***MASKED***",
-            "explanation": {
-              "summary": "summary 1",
-              "whyRisky": "why risky 1",
-              "abuseScenario": "abuse scenario 1",
-              "expectedImpact": "expected impact 1",
-              "severityInterpretation": "severity interpretation 1"
-            },
-            "impact": "beginner friendly impact 1",
-            "fix": {
-              "summary": "fix summary 1",
-              "priority": "high",
-              "recommendedActions": ["action-1", "action-2"],
-              "codeGuidance": "code guidance 1",
-              "verification": "verification 1",
-              "cautions": ["caution-1"]
-            }
-          },
-          {
-            "findingId": "FND-0002",
-            "ruleId": "DS-0002",
-            "source": "trivy",
-            "severity": "HIGH",
-            "file": "Dockerfile",
-            "line": null,
-            "title": "Image user should not be root",
-            "maskedEvidence": "Last USER command in Dockerfile should not be root",
-            "explanation": {
-              "summary": "summary 1",
-              "whyRisky": "why risky 1",
-              "abuseScenario": "abuse scenario 1",
-              "expectedImpact": "expected impact 1",
-              "severityInterpretation": "severity interpretation 1"
-            },
-            "impact": "beginner friendly impact 1",
-            "fix": {
-              "summary": "fix summary 2",
-              "priority": "high",
-              "recommendedActions": ["action-3"],
-              "codeGuidance": "code guidance 2",
-              "verification": "verification 2",
-              "cautions": ["caution-2"]
-            }
-          },
-          {
-            "findingId": "FND-0003",
-            "ruleId": "DS-0026",
-            "source": "trivy",
-            "severity": "LOW",
-            "file": "Dockerfile",
-            "line": null,
-            "title": "No HEALTHCHECK defined",
-            "maskedEvidence": "Add HEALTHCHECK instruction",
-            "explanation": {
-              "summary": "summary 1",
-              "whyRisky": "why risky 1",
-              "abuseScenario": "abuse scenario 1",
-              "expectedImpact": "expected impact 1",
-              "severityInterpretation": "severity interpretation 1"
-            },
-            "impact": "beginner friendly impact 1",
-            "fix": {
-              "summary": "fix summary 3",
-              "priority": "low",
-              "recommendedActions": ["action-4"],
-              "codeGuidance": "code guidance 3",
-              "verification": "verification 3",
-              "cautions": ["caution-3"]
-            }
-          }
-        ],
-        "patches": [
-          {
-            "patchId": "PATCH-0001",
-            "findingId": "FND-0001",
-            "targetFile": ".env",
-            "operation": "replace",
-            "oldText": "DB_PASSWORD=plain-text",
-            "newText": "DB_PASSWORD=${DB_PASSWORD}",
-            "expectedFileHash": "sha256:abc123...",
-            "requiresApproval": true,
-            "rollback": {
-              "operation": "replace",
-              "oldText": "DB_PASSWORD=${DB_PASSWORD}",
-              "newText": "DB_PASSWORD=plain-text"
-            }
-          }
-        ]
-      }
-      """;
-
-  private static final String SERVER_AUDIT_ANALYSIS_RESULT_JSON = """
-      {
-        "schemaVersion": "0.2",
-        "scanId": "server-audit-1",
-        "source": "server-audit",
-        "scannedAt": "2026-04-27T00:26:05Z",
         "generatedAt": "2026-05-04T01:57:29.596745+00:00",
         "resultCount": 1,
         "results": [
           {
-            "findingId": "SRV-0001",
-            "ruleId": "SSH-OPEN",
-            "source": "server-audit",
-            "severity": "HIGH",
-            "file": "/etc/ssh/sshd_config",
-            "line": 12,
-            "title": "SSH port is publicly exposed",
-            "maskedEvidence": "0.0.0.0:22",
-            "explanation": {
-              "summary": "summary 1",
-              "whyRisky": "why risky 1",
-              "abuseScenario": "abuse scenario 1",
-              "expectedImpact": "expected impact 1",
-              "severityInterpretation": "severity interpretation 1"
-            },
-            "impact": "beginner friendly impact 1",
-            "fix": {
-              "summary": "Restrict network access",
-              "priority": "high",
-              "recommendedActions": ["Check security group", "Restrict firewall rules"],
-              "codeGuidance": "Review inbound rules",
-              "verification": "Run firewall-cmd --list-all",
-              "cautions": ["Coordinate maintenance window"]
-            }
-          }
-        ]
-      }
-      """;
-
-  private static final String LEGACY_ANALYSIS_RESULT_JSON = """
-      {
-        "schemaVersion": "0.1",
-        "scanId": "legacy-scan-1",
-        "source": "cli",
-        "generatedAt": "2026-05-04T01:57:29.596745+00:00",
-        "findings": [
-          {
-            "id": "FND-0001",
+            "findingId": "FND-0001",
             "ruleId": "ENV_PLAIN_SECRET",
             "source": "custom-rule",
             "severity": "HIGH",
-            "file": ".env",
             "filePath": "Backend\\\\ssafer\\\\.env",
-            "targetFiles": ["Backend\\\\ssafer\\\\.env"],
             "line": 1,
-            "title": "Legacy hardcoded secret",
-            "maskedEvidence": "DB_PASSWORD=***MASKED***"
+            "title": "Hardcoded secret",
+            "maskedEvidence": "DB_PASSWORD=***MASKED***",
+            "explanation": {
+              "summary": "summary 1",
+              "abuseScenario": "abuse scenario 1"
+            },
+            "fix": {
+              "summary": "fix summary 1",
+              "recommendedActions": ["action-1"]
+            }
           }
         ],
         "patches": [
@@ -216,146 +73,7 @@ class WorkerAnalysisResultPersistenceServiceTest {
             "targetFile": ".env",
             "operation": "replace",
             "oldText": "DB_PASSWORD=plain-text",
-            "newText": "DB_PASSWORD=${DB_PASSWORD}",
-            "expectedFileHash": "sha256:abc123...",
-            "requiresApproval": true,
-            "rollback": {
-              "operation": "replace",
-              "oldText": "DB_PASSWORD=${DB_PASSWORD}",
-              "newText": "DB_PASSWORD=plain-text"
-            }
-          }
-        ]
-      }
-      """;
-
-  private static final String NESTED_PATCH_ANALYSIS_RESULT_JSON = """
-      {
-        "schemaVersion": "0.2",
-        "scanId": "nested-patch-scan-1",
-        "source": "cli",
-        "generatedAt": "2026-05-04T01:57:29.596745+00:00",
-        "results": [
-          {
-            "findingId": "FND-0001",
-            "ruleId": "ENV_PLAIN_SECRET",
-            "source": "custom-rule",
-            "severity": "HIGH",
-            "file": ".env",
-            "line": 1,
-            "title": "Nested patch finding",
-            "maskedEvidence": "DB_PASSWORD=***MASKED***",
-            "fix": {
-              "summary": "fix summary 1",
-              "patches": [
-                {
-                  "patchId": "PATCH-0001",
-                  "targetFile": ".env",
-                  "operation": "replace",
-                  "oldText": "DB_PASSWORD=plain-text",
-                  "newText": "DB_PASSWORD=${DB_PASSWORD}"
-                }
-              ]
-            }
-          }
-        ]
-      }
-      """;
-
-  private static final String LATEST_WORKER_ANALYSIS_RESULT_JSON = """
-      {
-        "schemaVersion": "0.1",
-        "scanId": "uuid",
-        "source": "cli",
-        "scannedAt": "2026-05-12T00:00:00Z",
-        "generatedAt": "2026-05-12T00:00:00+00:00",
-        "resultCount": 1,
-        "results": [
-          {
-            "findingId": "FND-0001",
-            "ruleId": "COMPOSE_HARDCODED_SECRET",
-            "source": "custom-rule",
-            "severity": "HIGH",
-            "file": "docker-compose.yml",
-            "filePath": "docker-compose.yml",
-            "line": 12,
-            "title": "서비스에 민감한 환경변수가 설정됨",
-            "maskedEvidence": "DB_PASSWORD=***MASKED***",
-            "explanation": {
-              "summary": "취약점 요약",
-              "whyRisky": "위험한 이유",
-              "abuseScenario": "악용 가능 시나리오",
-              "expectedImpact": "예상 영향",
-              "severityInterpretation": "심각도 해석"
-            },
-            "impact": "초보자도 이해하기 쉬운 비유 중심 현실 영향 설명",
-            "fix": {
-              "summary": "수정 요약",
-              "priority": "high",
-              "recommendedActions": ["조치 1", "조치 2"],
-              "codeGuidance": "코드/설정 변경 가이드",
-              "verification": "검증 방법",
-              "cautions": ["주의사항"],
-              "patches": [
-                {
-                  "patchId": "PATCH-FND-0001",
-                  "findingId": "FND-0001",
-                  "operation": "replace",
-                  "filePath": "docker-compose.yml",
-                  "oldText": "기존 원문",
-                  "newText": "수정 후 원문",
-                  "expectedFileHash": "sha256:..."
-                }
-              ]
-            },
-            "targetFiles": [
-              "docker-compose.yml"
-            ]
-          }
-        ]
-      }
-      """;
-
-  private static final String DISTINCT_TRIVY_FILEPATHS_JSON = """
-      {
-        "schemaVersion": "0.2",
-        "scanId": "trivy-filepath-scan",
-        "source": "cli",
-        "generatedAt": "2026-05-04T01:57:29.596745+00:00",
-        "resultCount": 3,
-        "results": [
-          {
-            "findingId": "FND-1001",
-            "ruleId": "DS-0002",
-            "source": "trivy",
-            "severity": "HIGH",
-            "file": "Dockerfile",
-            "filePath": "app/ai-server/Dockerfile",
-            "line": null,
-            "title": "Image user should not be root",
-            "maskedEvidence": "Last USER command in Dockerfile should not be root"
-          },
-          {
-            "findingId": "FND-1002",
-            "ruleId": "DS-0002",
-            "source": "trivy",
-            "severity": "HIGH",
-            "file": "Dockerfile",
-            "filePath": "app/backend/Dockerfile",
-            "line": null,
-            "title": "Image user should not be root",
-            "maskedEvidence": "Last USER command in Dockerfile should not be root"
-          },
-          {
-            "findingId": "FND-1003",
-            "ruleId": "DS-0002",
-            "source": "trivy",
-            "severity": "HIGH",
-            "file": "Dockerfile",
-            "filePath": "infra/nginx/Dockerfile",
-            "line": null,
-            "title": "Image user should not be root",
-            "maskedEvidence": "Last USER command in Dockerfile should not be root"
+            "newText": "DB_PASSWORD=${DB_PASSWORD}"
           }
         ]
       }
@@ -363,29 +81,24 @@ class WorkerAnalysisResultPersistenceServiceTest {
 
   @Mock
   private ScanRepository scanRepository;
-
   @Mock
-  private AgentTaskRepository agentTaskRepository;
-
+  private WorkerJobRepository workerJobRepository;
   @Mock
   private ScanNodeRepository scanNodeRepository;
-
   @Mock
   private ScanFindingRepository scanFindingRepository;
-
   @Mock
   private AnalysisResultObjectReader analysisResultObjectReader;
-
   @Mock
   private ApplicationEventPublisher applicationEventPublisher;
 
-  private WorkerAnalysisResultPersistenceService workerAnalysisResultPersistenceService;
+  private WorkerAnalysisResultPersistenceService service;
 
   @BeforeEach
   void setUp() {
-    workerAnalysisResultPersistenceService = new WorkerAnalysisResultPersistenceService(
+    service = new WorkerAnalysisResultPersistenceService(
         scanRepository,
-        agentTaskRepository,
+        workerJobRepository,
         scanNodeRepository,
         scanFindingRepository,
         analysisResultObjectReader,
@@ -395,14 +108,13 @@ class WorkerAnalysisResultPersistenceServiceTest {
   }
 
   @Test
-  void persistSavesNodeAndFindingsAndMarksDone() throws Exception {
+  void persistMarksWorkerJobSucceededAndSavesFindings() throws Exception {
     Scan scan = runningScan();
-    AgentTask task = ackedTask(scan);
-    WorkerAnalysisResultIngestionRequestedEvent event = event();
+    WorkerJob workerJob = publishedWorkerJob(scan);
     ScanNode savedNode = ScanNode.builder()
         .id(200L)
         .scanId(scan.getId())
-        .nodeKey("a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd")
+        .nodeKey("upload-scan-1")
         .nodeName("cli")
         .nodeType("ANALYSIS_RESULT")
         .metadataJson("{}")
@@ -410,392 +122,62 @@ class WorkerAnalysisResultPersistenceServiceTest {
         .build();
 
     when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
+    when(workerJobRepository.findByIdAndScanIdForUpdate(workerJob.getId(), scan.getId()))
+        .thenReturn(Optional.of(workerJob));
     when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd"))
-        .thenReturn(Optional.empty());
+    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "upload-scan-1")).thenReturn(Optional.empty());
     when(scanNodeRepository.save(any(ScanNode.class))).thenReturn(savedNode);
     when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of());
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(3L);
+    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(1L);
 
-    workerAnalysisResultPersistenceService.persist(event);
+    service.persist(event(workerJob));
 
     ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
     verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    assertThat(findingsCaptor.getValue()).hasSize(3);
-    assertThat(findingsCaptor.getValue())
-        .extracting(ScanFinding::getFingerprint)
-        .allMatch(fingerprint -> fingerprint.startsWith("sha256:"));
-    assertThat(findingsCaptor.getValue())
-        .extracting(ScanFinding::getResourceName)
-        .containsExactly(".env", "Dockerfile", "Dockerfile");
-    assertThat(findingsCaptor.getValue().getFirst().getDescription()).isEqualTo("summary 1");
-    assertThat(findingsCaptor.getValue().getFirst().getAttackScenario()).isEqualTo("abuse scenario 1");
-    JsonNode rawSnippet = new ObjectMapper().readTree(findingsCaptor.getValue().getFirst().getRawSnippetJson());
-    assertThat(rawSnippet.path("findingId").asText()).isEqualTo("FND-0001");
-    assertThat(rawSnippet.path("impact").asText()).isEqualTo("beginner friendly impact 1");
-    assertThat(rawSnippet.path("explanation").path("summary").asText()).isEqualTo("summary 1");
-    assertThat(rawSnippet.has("fix")).isTrue();
-    JsonNode patchPayload = new ObjectMapper().readTree(findingsCaptor.getValue().getFirst().getPatchPayloadJson());
-    assertThat(patchPayload.path("patches")).hasSize(1);
-    assertThat(patchPayload.path("patches").get(0).path("patchId").asText()).isEqualTo("PATCH-0001");
-    assertThat(findingsCaptor.getValue().get(1).getPatchPayloadJson()).isNull();
-    assertThat(task.getTaskStatus()).isEqualTo(AgentTaskStatus.SUCCEEDED);
+    assertThat(findingsCaptor.getValue()).hasSize(1);
+    assertThat(findingsCaptor.getValue().getFirst().getResolutionStatus()).isEqualTo(ResolutionStatus.OPEN);
+    assertThat(findingsCaptor.getValue().getFirst().getPatchPayloadJson()).contains("PATCH-0001");
+    assertThat(workerJob.getJobStatus()).isEqualTo(WorkerJobStatus.SUCCEEDED);
     assertThat(scan.getStatus()).isEqualTo(ScanStatus.DONE);
-    assertThat(scan.getProgressStep()).isEqualTo(WorkerAnalysisResultPersistenceService.COMPLETED_PROGRESS_STEP);
     verify(applicationEventPublisher).publishEvent(new ScanStatusSsePublishRequestedEvent(1L, ScanStatus.DONE));
   }
 
   @Test
-  void persistSkipsWhenAlreadyCompleted() {
+  void persistSkipsWhenScanAndWorkerJobAlreadyCompleted() {
     Scan scan = completedScan();
-    AgentTask task = succeededTask(scan);
+    WorkerJob workerJob = succeededWorkerJob(scan);
 
     when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
+    when(workerJobRepository.findByIdAndScanIdForUpdate(workerJob.getId(), scan.getId()))
+        .thenReturn(Optional.of(workerJob));
 
-    workerAnalysisResultPersistenceService.persist(event());
+    service.persist(event(workerJob));
 
     verify(analysisResultObjectReader, never()).read(any());
-    verify(scanNodeRepository, never()).save(any());
     verify(scanFindingRepository, never()).saveAll(any());
   }
 
   @Test
-  void persistRetrySavesOnlyMissingFindings() {
+  void markFailedMarksWorkerJobAndScanFailed() {
     Scan scan = runningScan();
-    AgentTask task = runningTask(scan);
-    ScanNode existingNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd")
-        .nodeName("cli")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-    ScanFinding existingFinding = ScanFinding.builder()
-        .id(300L)
-        .scanId(scan.getId())
-        .scanNodeId(existingNode.getId())
-        .sourceType(com.ssafer.scan.domain.enums.FindingSourceType.CUSTOM_RULE)
-        .fingerprint("FND-0001")
-        .severity(com.ssafer.scan.domain.enums.Severity.HIGH)
-        .category("CUSTOM_RULE")
-        .title("湲곗〈 finding")
-        .resolutionStatus(com.ssafer.scan.domain.enums.ResolutionStatus.OPEN)
-        .createdAt(LocalDateTime.now())
-        .build();
+    WorkerJob workerJob = publishedWorkerJob(scan);
 
     when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd"))
-        .thenReturn(Optional.of(existingNode));
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of(existingFinding));
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(3L);
+    when(workerJobRepository.findByIdAndScanIdForUpdate(workerJob.getId(), scan.getId()))
+        .thenReturn(Optional.of(workerJob));
 
-    workerAnalysisResultPersistenceService.persist(event());
+    service.markFailed(event(workerJob), new IllegalStateException("temporary s3 failure"));
 
-    ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
-    verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    assertThat(findingsCaptor.getValue()).hasSize(2);
-    assertThat(findingsCaptor.getValue())
-        .extracting(ScanFinding::getTitle)
-        .containsExactly("Image user should not be root", "No HEALTHCHECK defined");
-    assertThat(task.getTaskStatus()).isEqualTo(AgentTaskStatus.SUCCEEDED);
-    assertThat(scan.getStatus()).isEqualTo(ScanStatus.DONE);
-  }
-
-  @Test
-  void persistRetryBackfillsPatchPayloadForExistingFinding() {
-    Scan scan = runningScan();
-    AgentTask task = runningTask(scan);
-    ScanNode existingNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd")
-        .nodeName("cli")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-    ScanFinding existingFinding = ScanFinding.builder()
-        .id(300L)
-        .scanId(scan.getId())
-        .scanNodeId(existingNode.getId())
-        .sourceType(com.ssafer.scan.domain.enums.FindingSourceType.CUSTOM_RULE)
-        .fingerprint("FND-0001")
-        .severity(com.ssafer.scan.domain.enums.Severity.HIGH)
-        .category("CUSTOM_RULE")
-        .title("湲곗〈 finding")
-        .rawSnippetJson("{\"maskedEvidence\":\"DB_PASSWORD=***MASKED***\"}")
-        .resolutionStatus(com.ssafer.scan.domain.enums.ResolutionStatus.OPEN)
-        .createdAt(LocalDateTime.now())
-        .build();
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd"))
-        .thenReturn(Optional.of(existingNode));
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of(existingFinding));
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(3L);
-
-    workerAnalysisResultPersistenceService.persist(event());
-
-    verify(scanFindingRepository).saveAll(any());
-    assertThat(existingFinding.getPatchPayloadJson()).isNotBlank();
-    assertThat(existingFinding.getPatchPayloadJson()).contains("PATCH-0001");
-    assertThat(existingFinding.getFingerprint()).startsWith("sha256:");
-    assertThat(existingFinding.getDescription()).isEqualTo("summary 1");
-    assertThat(existingFinding.getAttackScenario()).isEqualTo("abuse scenario 1");
-    assertThat(existingFinding.getRemediationGuide()).contains("fix summary 1");
-    assertThat(existingFinding.getRawSnippetJson()).contains("\"impact\"");
-    assertThat(task.getTaskStatus()).isEqualTo(AgentTaskStatus.SUCCEEDED);
-    assertThat(scan.getStatus()).isEqualTo(ScanStatus.DONE);
-  }
-
-  @Test
-  void persistKeepsTrivyFindingsDistinctWhenOnlyFilePathDiffers() {
-    Scan scan = runningScan();
-    AgentTask task = ackedTask(scan);
-    ScanNode savedNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("trivy-filepath-scan")
-        .nodeName("cli")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(DISTINCT_TRIVY_FILEPATHS_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "trivy-filepath-scan"))
-        .thenReturn(Optional.empty());
-    when(scanNodeRepository.save(any(ScanNode.class))).thenReturn(savedNode);
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of());
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(3L);
-
-    workerAnalysisResultPersistenceService.persist(event());
-
-    ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
-    verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    assertThat(findingsCaptor.getValue()).hasSize(3);
-    assertThat(findingsCaptor.getValue())
-        .extracting(ScanFinding::getFilePath)
-        .containsExactly(
-            "app/ai-server/Dockerfile",
-            "app/backend/Dockerfile",
-            "infra/nginx/Dockerfile"
-        );
-    assertThat(findingsCaptor.getValue())
-        .extracting(ScanFinding::getFingerprint)
-        .doesNotHaveDuplicates();
-  }
-
-  @Test
-  void persistSkipsPatchPayloadGenerationForServerAudit() {
-    Scan scan = runningScan();
-    ReflectionTestUtils.setField(scan, "scanType", ScanType.SERVER_AUDIT);
-    AgentTask task = ackedTask(scan);
-    WorkerAnalysisResultIngestionRequestedEvent event = event();
-    ScanNode savedNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd")
-        .nodeName("cli")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "a36ae6b4-0eaf-44a1-bd24-1ce17c6a59cd"))
-        .thenReturn(Optional.empty());
-    when(scanNodeRepository.save(any(ScanNode.class))).thenReturn(savedNode);
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of());
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(3L);
-
-    workerAnalysisResultPersistenceService.persist(event);
-
-    ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
-    verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    assertThat(findingsCaptor.getValue())
-        .extracting(ScanFinding::getPatchPayloadJson)
-        .containsOnlyNulls();
-  }
-
-  @Test
-  void persistMapsServerAuditFindingSource() {
-    Scan scan = runningScan();
-    ReflectionTestUtils.setField(scan, "scanType", ScanType.SERVER_AUDIT);
-    AgentTask task = ackedTask(scan);
-    ScanNode savedNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("server-audit-1")
-        .nodeName("server-audit")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(SERVER_AUDIT_ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "server-audit-1")).thenReturn(Optional.empty());
-    when(scanNodeRepository.save(any(ScanNode.class))).thenReturn(savedNode);
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of());
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(1L);
-
-    workerAnalysisResultPersistenceService.persist(event());
-
-    ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
-    verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    assertThat(findingsCaptor.getValue()).hasSize(1);
-    assertThat(findingsCaptor.getValue().getFirst().getSourceType()).isEqualTo(FindingSourceType.SERVER_AUDIT);
-    assertThat(findingsCaptor.getValue().getFirst().getPatchPayloadJson()).isNull();
-  }
-
-  @Test
-  void persistSupportsLegacyFindingsArrayAndIdField() {
-    Scan scan = runningScan();
-    AgentTask task = ackedTask(scan);
-    ScanNode savedNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("legacy-scan-1")
-        .nodeName("cli")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(LEGACY_ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "legacy-scan-1"))
-        .thenReturn(Optional.empty());
-    when(scanNodeRepository.save(any(ScanNode.class))).thenReturn(savedNode);
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of());
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(1L);
-
-    workerAnalysisResultPersistenceService.persist(event());
-
-    ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
-    verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    assertThat(findingsCaptor.getValue()).hasSize(1);
-    assertThat(findingsCaptor.getValue().getFirst().getFingerprint()).startsWith("sha256:");
-    assertThat(findingsCaptor.getValue().getFirst().getFilePath()).isEqualTo("Backend\\ssafer\\.env");
-    JsonNode rawSnippet = new ObjectMapper().readTree(findingsCaptor.getValue().getFirst().getRawSnippetJson());
-    assertThat(rawSnippet.path("id").asText()).isEqualTo("FND-0001");
-    assertThat(rawSnippet.path("filePath").asText()).isEqualTo("Backend\\ssafer\\.env");
-    assertThat(rawSnippet.path("targetFiles")).hasSize(1);
-  }
-
-  @Test
-  void persistStillSupportsNestedFixPatchesWhenRootPatchesAreMissing() throws Exception {
-    Scan scan = runningScan();
-    AgentTask task = ackedTask(scan);
-    ScanNode savedNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("nested-patch-scan-1")
-        .nodeName("cli")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(NESTED_PATCH_ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "nested-patch-scan-1"))
-        .thenReturn(Optional.empty());
-    when(scanNodeRepository.save(any(ScanNode.class))).thenReturn(savedNode);
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of());
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(1L);
-
-    workerAnalysisResultPersistenceService.persist(event());
-
-    ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
-    verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    JsonNode patchPayload = new ObjectMapper().readTree(findingsCaptor.getValue().getFirst().getPatchPayloadJson());
-    assertThat(patchPayload.path("patches")).hasSize(1);
-    assertThat(patchPayload.path("patches").get(0).path("patchId").asText()).isEqualTo("PATCH-0001");
-  }
-
-  @Test
-  void persistSupportsLatestWorkerSchemaFields() throws Exception {
-    Scan scan = runningScan();
-    AgentTask task = ackedTask(scan);
-    ScanNode savedNode = ScanNode.builder()
-        .id(200L)
-        .scanId(scan.getId())
-        .nodeKey("uuid")
-        .nodeName("cli")
-        .nodeType("ANALYSIS_RESULT")
-        .metadataJson("{}")
-        .createdAt(LocalDateTime.now())
-        .build();
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-    when(analysisResultObjectReader.read(scan.getAnalysisResultPath())).thenReturn(LATEST_WORKER_ANALYSIS_RESULT_JSON);
-    when(scanNodeRepository.findByScanIdAndNodeKey(scan.getId(), "uuid")).thenReturn(Optional.empty());
-    when(scanNodeRepository.save(any(ScanNode.class))).thenReturn(savedNode);
-    when(scanFindingRepository.findAllByScanId(scan.getId())).thenReturn(List.of());
-    when(scanFindingRepository.countByScanId(scan.getId())).thenReturn(1L);
-
-    workerAnalysisResultPersistenceService.persist(event());
-
-    ArgumentCaptor<List<ScanFinding>> findingsCaptor = ArgumentCaptor.forClass(List.class);
-    verify(scanFindingRepository).saveAll(findingsCaptor.capture());
-    assertThat(findingsCaptor.getValue()).hasSize(1);
-
-    ScanFinding finding = findingsCaptor.getValue().getFirst();
-    assertThat(finding.getFilePath()).isEqualTo("docker-compose.yml");
-    assertThat(finding.getDescription()).isEqualTo("취약점 요약");
-    assertThat(finding.getAttackScenario()).isEqualTo("악용 가능 시나리오");
-    assertThat(finding.getRemediationGuide()).contains("수정 요약");
-    assertThat(finding.getPatchPayloadJson()).contains("PATCH-FND-0001");
-
-    JsonNode rawSnippet = new ObjectMapper().readTree(finding.getRawSnippetJson());
-    assertThat(rawSnippet.path("filePath").asText()).isEqualTo("docker-compose.yml");
-    assertThat(rawSnippet.path("impact").asText()).isEqualTo("초보자도 이해하기 쉬운 비유 중심 현실 영향 설명");
-    assertThat(rawSnippet.path("targetFiles")).hasSize(1);
-    assertThat(rawSnippet.path("explanation").path("whyRisky").asText()).isEqualTo("위험한 이유");
-    assertThat(rawSnippet.path("fix").path("patches")).hasSize(1);
-  }
-
-  @Test
-  void markFailedMarksTaskAndScanFailed() {
-    Scan scan = runningScan();
-    AgentTask task = ackedTask(scan);
-
-    when(scanRepository.findByIdForUpdate(scan.getId())).thenReturn(Optional.of(scan));
-    when(agentTaskRepository.findByIdAndScanId(task.getId(), scan.getId())).thenReturn(Optional.of(task));
-
-    workerAnalysisResultPersistenceService.markFailed(event(), new IllegalStateException("temporary s3 failure"));
-
-    assertThat(task.getTaskStatus()).isEqualTo(AgentTaskStatus.FAILED);
-    assertThat(task.getFailureReason()).contains("temporary s3 failure");
+    assertThat(workerJob.getJobStatus()).isEqualTo(WorkerJobStatus.FAILED);
+    assertThat(workerJob.getFailureReason()).contains("temporary s3 failure");
     assertThat(scan.getStatus()).isEqualTo(ScanStatus.FAILED);
-    assertThat(scan.getProgressStep()).isEqualTo(WorkerAnalysisResultPersistenceService.FAILED_PROGRESS_STEP);
-    assertThat(scan.getFailureReason()).contains("temporary s3 failure");
-    assertThat(scan.getCompletedAt()).isNotNull();
     verify(applicationEventPublisher).publishEvent(new ScanStatusSsePublishRequestedEvent(1L, ScanStatus.FAILED));
   }
 
-  private WorkerAnalysisResultIngestionRequestedEvent event() {
+  private WorkerAnalysisResultIngestionRequestedEvent event(WorkerJob workerJob) {
     return new WorkerAnalysisResultIngestionRequestedEvent(
         1L,
-        100L,
+        workerJob.getId(),
         LocalDateTime.of(2026, 5, 6, 10, 1),
         LocalDateTime.of(2026, 5, 6, 10, 5)
     );
@@ -807,7 +189,7 @@ class WorkerAnalysisResultPersistenceServiceTest {
         .projectId(10L)
         .requestedByUserId(20L)
         .requestActorType(RequestActorType.USER)
-        .scanMode(com.ssafer.scan.domain.enums.ScanMode.AGENT)
+        .scanMode(com.ssafer.scan.domain.enums.ScanMode.UPLOAD)
         .scanType(ScanType.PROJECT_FILE)
         .status(ScanStatus.RUNNING)
         .progressStep(WorkerAnalysisResultPersistenceService.INGESTING_PROGRESS_STEP)
@@ -824,7 +206,7 @@ class WorkerAnalysisResultPersistenceServiceTest {
         .projectId(10L)
         .requestedByUserId(20L)
         .requestActorType(RequestActorType.USER)
-        .scanMode(com.ssafer.scan.domain.enums.ScanMode.AGENT)
+        .scanMode(com.ssafer.scan.domain.enums.ScanMode.UPLOAD)
         .scanType(ScanType.PROJECT_FILE)
         .status(ScanStatus.DONE)
         .analysisResultPath("s3://ssafer/result/1/analysis_result.json")
@@ -835,38 +217,30 @@ class WorkerAnalysisResultPersistenceServiceTest {
         .build();
   }
 
-  private AgentTask ackedTask(Scan scan) {
-    AgentTask task = baseTask(scan);
-    ReflectionTestUtils.setField(task, "id", 100L);
-    task.markSent(Instant.now());
-    task.markAcked(Instant.now());
-    return task;
+  private WorkerJob publishedWorkerJob(Scan scan) {
+    WorkerJob workerJob = baseWorkerJob(scan);
+    workerJob.markPublished(Instant.now());
+    return workerJob;
   }
 
-  private AgentTask runningTask(Scan scan) {
-    AgentTask task = ackedTask(scan);
-    task.markRunning(Instant.now());
-    return task;
+  private WorkerJob succeededWorkerJob(Scan scan) {
+    WorkerJob workerJob = publishedWorkerJob(scan);
+    workerJob.markRunning(Instant.now());
+    workerJob.markSucceeded(Instant.now());
+    return workerJob;
   }
 
-  private AgentTask succeededTask(Scan scan) {
-    AgentTask task = runningTask(scan);
-    task.markSucceeded(Instant.now());
-    return task;
-  }
-
-  private AgentTask baseTask(Scan scan) {
-    return new AgentTask(agent(), project(), scan, null, AgentTaskType.SCAN_REQUEST, AgentTaskStatus.PENDING, null);
-  }
-
-  private Agent agent() {
-    return new Agent(project(), AgentStatus.ONLINE);
-  }
-
-  private Project project() {
-    return new Project(20L, null, "test-project", null, ScanMode.AGENT, false);
+  private WorkerJob baseWorkerJob(Scan scan) {
+    Project project = new Project(20L, null, "test-project", null, ScanMode.AGENT, false);
+    ReflectionTestUtils.setField(project, "id", scan.getProjectId());
+    WorkerJob workerJob = new WorkerJob(
+        project,
+        scan,
+        WorkerJobType.UPLOAD_ANALYSIS_REQUEST,
+        WorkerJobStatus.PENDING,
+        null
+    );
+    ReflectionTestUtils.setField(workerJob, "id", 100L);
+    return workerJob;
   }
 }
-
-
-
